JSTests::NumberLong fails

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.1.0
    • Affects Version/s: 1.8.2, 1.8.3
    • Component/s: JavaScript
    • None
    • Environment:
      debian sid on i386
    • Linux
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I've switched debian packages to v8 due to upcomming changes in xulrunner in debian. Test suite fails on i386 (it is working on amd64) with

      Tue Aug 23 07:43:49 [testsuite] going to run suite: js
      cannot write to read-only object
      cannot write to read-only object
      cannot write to read-only object
      cannot delete from read-only object

      { "a" : NumberLong("-4991432399172682752") }

      -4991432399172683043
      -4991432399172682752

      { b: -4991432399172682752 }

      Tue Aug 23 07:43:49 [testsuite] dbtests/jstests.cpp:541 val != out.firstElement().numberLong() assertion: dbtests/jstests.cpp:541 val != out.firstElement().numberLong() -4991432399172683043 != -4991432399172682752

      Tue Aug 23 07:43:49 [testsuite] FAIL: JSTests::NumberLong assertion: dbtests/jstests.cpp:541 val != out.firstElement().numberLong() -4991432399172683043 != -4991432399172682752

      I am trying to build mongo with libv8-3.1.8.22_3.1.8.22-1_i386.deb, I haven't seen any relevant warning during build.

      Reported as http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=637370

            Assignee:
            Antoine Girbal (Inactive)
            Reporter:
            Antonin Kral
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: