- SERVER-3676: JSTests::NumberLong fails